--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -8,7 +8,8 @@ body {
 
 @media (max-width: 1350px) {
   .container {
-    width: 90% !important;
+    width: 90% !important; 
+    /* hello */
   }
 }
 
